--- a/pom.xml
+++ b/pom.xml
@@ -4,73 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>as.leap.cloud.code</groupId>
-    <artifactId>cloud-code-template-java</artifactId>
+    <groupId>as.leap</groupId>
+    <artifactId>LAS-demo-cloudcode-java</artifactId>
     <version>2.0.1-SNAPSHOT</version>
-
-    <properties>
-        <nexus.develop.host>10.10.10.137:8081</nexus.develop.host>
-        <nexus.production.host>54.164.163.132:8081</nexus.production.host>
-    </properties>
-
-    <repositories>
-        <repository>
-            <id>public</id>
-            <name>Public Repositories</name>
-            <url>http://${nexus.develop.host}/nexus/content/groups/public</url>
-        </repository>
-        <repository>
-            <id>releases</id>
-            <name>Internal Releases</name>
-            <url>http://${nexus.develop.host}/nexus/content/repositories/releases</url>
-        </repository>
-        <repository>
-            <id>snapshots</id>
-            <name>Internal Releases</name>
-            <url>http://${nexus.develop.host}/nexus/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>public</id>
-            <name>Public Repositories</name>
-            <url>http://${nexus.develop.host}/nexus/content/groups/public</url>
-        </pluginRepository>
-    </pluginRepositories>
-
-    <profiles>
-        <profile>
-            <id>dev</id>
-            <distributionManagement>
-                <repository>
-                    <id>releases</id>
-                    <name>Internal Releases</name>
-                    <url>http://${nexus.develop.host}/nexus/content/repositories/releases</url>
-                </repository>
-                <snapshotRepository>
-                    <id>snapshots</id>
-                    <name>Internal Releases</name>
-                    <url>http://${nexus.develop.host}/nexus/content/repositories/snapshots</url>
-                </snapshotRepository>
-            </distributionManagement>
-        </profile>
-        <profile>
-            <id>pro</id>
-            <distributionManagement>
-                <repository>
-                    <id>releases</id>
-                    <name>Internal Releases</name>
-                    <url>http://${nexus.production.host}/content/repositories/releases</url>
-                </repository>
-                <snapshotRepository>
-                    <id>snapshots</id>
-                    <name>Internal Releases</name>
-                    <url>http://${nexus.production.host}/content/repositories/snapshots</url>
-                </snapshotRepository>
-            </distributionManagement>
-        </profile>
-    </profiles>
 
     <dependencies>
         <dependency>
@@ -127,8 +63,8 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.0</version>
             <configuration>
-              <source>1.8</source>
-              <target>1.8</target>
+              <source>1.7</source>
+              <target>1.7</target>
             </configuration>
           </plugin>
         </plugins>
