--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>as.leap</groupId>
             <artifactId>cloud-code-test</artifactId>
-            <version>2.3.2-SNAPSHOT</version>
+            <version>2.3.2</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
