--- a/pom.xml
+++ b/pom.xml
@@ -12,19 +12,19 @@
     <dependency>
       <groupId>as.leap</groupId>
       <artifactId>cloud-code-base</artifactId>
-      <version>2.3.5-SNAPSHOT</version>
+      <version>2.3.6</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>as.leap</groupId>
       <artifactId>cloud-code-sdk</artifactId>
-      <version>2.3.5-SNAPSHOT</version>
+      <version>2.3.6</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>as.leap</groupId>
       <artifactId>cloud-code-test</artifactId>
-      <version>2.3.5-SNAPSHOT</version>
+      <version>2.3.6</version>
       <scope>test</scope>
     </dependency>
     <dependency>
