--- a/pom.xml
+++ b/pom.xml
@@ -4,33 +4,26 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>as.leap</groupId>
+  <groupId>com.maxleap</groupId>
   <artifactId>LAS-demo-cloudcode-java</artifactId>
-  <version>2.0.1-SNAPSHOT</version>
+  <version>2.4.0</version>
+
+  <properties>
+    <sdk.version>2.4.0</sdk.version>
+    <junit.version>4.11</junit.version>
+  </properties>
 
   <dependencies>
     <dependency>
-      <groupId>as.leap</groupId>
-      <artifactId>cloud-code-base</artifactId>
-      <version>2.3.6</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>as.leap</groupId>
-      <artifactId>cloud-code-sdk</artifactId>
-      <version>2.3.6</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>as.leap</groupId>
+      <groupId>com.maxleap</groupId>
       <artifactId>cloud-code-test</artifactId>
-      <version>2.3.6</version>
-      <scope>test</scope>
+      <version>${sdk.version}</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
