--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.maxleap</groupId>
-  <artifactId>LAS-demo-cloudcode-java</artifactId>
+  <artifactId>demo-cloudcode-java</artifactId>
   <version>2.4.0</version>
 
   <properties>
