--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <version>2.4.0</version>
 
   <properties>
-    <sdk.version>2.4.3-SNAPSHOT</sdk.version>
+    <sdk.version>2.4.3</sdk.version>
     <junit.version>4.11</junit.version>
   </properties>
 
